Issue fix and updated readme.md

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -35,6 +35,8 @@
             <includes>
               <include>**/*ChallengeTest.java</include>
             </includes>
+            <useSystemClassLoader>false</useSystemClassLoader>
+            <trimStackTrace>false</trimStackTrace>
           </configuration>
         </plugin>
         <plugin>
