fixed missing elements in project templates - .gitignore - trim Stacktrace in pom xml

--- a/src/main/resources/archetype-resources/Dockerfile.workspace
+++ b/src/main/resources/archetype-resources/Dockerfile.workspace
@@ -6,4 +6,4 @@ RUN apt-get update && apt-get install -y maven
 ADD . /project-at-buildtime
 RUN cd /project-at-buildtime && mvn install -DskipTests=True
 
-CMD ["/bin/bash", "-c", "ln -s /project-at-buildtime/target /data/task-data/target && ./workspace"]
+    CMD ["/bin/bash", "-c", "ln -nsf /project-at-buildtime/target /data/task-data/target && ./workspace"]
