--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -9,7 +9,6 @@
  
     <name>${artifactId}</name>
     <url>https://entwicklerheld.de</url>
- 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -23,9 +22,15 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest</artifactId>
+          <version>2.1</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
 
-     <build>
+  <build>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -40,14 +45,16 @@
           </configuration>
         </plugin>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.0</version>
-            <configuration>
-                <release>8</release>
-            </configuration>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+            <verbose>true</verbose>
+          </configuration>
         </plugin>
-      </plugins>  
+      </plugins>
     </pluginManagement>
   </build>
 </project>
